--- a/Mini-projet/LightOff_LEROUX_version_graphique/src/lightoff_leroux_version_console/FenetrePrincipale.form
+++ b/Mini-projet/LightOff_LEROUX_version_graphique/src/lightoff_leroux_version_console/FenetrePrincipale.form
@@ -53,7 +53,7 @@
     <Container class="javax.swing.JPanel" name="PanneauBoutonsVerticaux">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="99" red="99" type="rgb"/>
+          <Color blue="33" green="ff" red="33" type="rgb"/>
         </Property>
       </Properties>
       <Constraints>
